[gd_scene load_steps=19 format=2]

[ext_resource path="res://levels/Level4_3.tmx" type="PackedScene" id=1]
[ext_resource path="res://levels/LevelSetup.gd" type="Script" id=2]
[ext_resource path="res://levels/EndLevelData.gd" type="Script" id=3]
[ext_resource path="res://items/Sconce.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemies/BoneDragon.tscn" type="PackedScene" id=5]
[ext_resource path="res://bosses/Frank.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/Destructible.tscn" type="PackedScene" id=7]
[ext_resource path="res://levels/Level4Block.tres" type="Texture" id=8]
[ext_resource path="res://levels/Level4_3.gd" type="Script" id=9]
[ext_resource path="res://BossArea.tscn" type="PackedScene" id=10]
[ext_resource path="res://bosses/Igor.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 62, 91.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 56.5 )

[sub_resource type="SegmentShape2D" id=6]
b = Vector2( 32, 0 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 56 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 87.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 155.125, 8.25 )

[node name="Level4_3" type="Node2D"]
script = ExtResource( 9 )

[node name="Level4_3" parent="." instance=ExtResource( 1 )]

[node name="Sconces" type="Node2D" parent="Level4_3"]
position = Vector2( -11, 6 )

[node name="Sconce" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 43, 93 )

[node name="Sconce2" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 107, 93 )

[node name="Sconce3" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 171, 93 )
drop = "dagger"

[node name="Sconce4" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 235, 93 )

[node name="Sconce5" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 299, 93 )

[node name="Sconce6" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 363, 93 )

[node name="Sconce7" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 427, 93 )

[node name="Sconce8" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 491, 93 )

[node name="Sconce9" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 555, 93 )

[node name="Sconce10" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 619, 93 )

[node name="Sconce11" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 683, 93 )

[node name="Sconce14" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 892, 93 )

[node name="Sconce15" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 1002, 93 )

[node name="Sconce13" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 811, 59 )
drop = "bigHeart"

[node name="Sconce16" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 940, 59 )

[node name="Sconce12" parent="Level4_3/Sconces" instance=ExtResource( 4 )]
position = Vector2( 747, 93 )
drop = "bigHeart"

[node name="FloatingFloors" type="StaticBody2D" parent="Level4_3"]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level4_3/FloatingFloors"]
position = Vector2( 816, 136 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Level4_3/FloatingFloors"]
position = Vector2( 944, 136 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Level4_3/FloatingFloors"]
position = Vector2( 1009, 104 )
shape = SubResource( 3 )

[node name="BossArea" parent="Level4_3" instance=ExtResource( 10 )]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level4_3/BossArea"]
position = Vector2( 963, 83.5 )
shape = SubResource( 4 )

[node name="Bosswall" type="StaticBody2D" parent="Level4_3"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level4_3/Bosswall"]
position = Vector2( 758, 56 )
shape = SubResource( 5 )

[node name="Frank" parent="Level4_3" instance=ExtResource( 6 )]
position = Vector2( 1008, 136 )

[node name="Igor" parent="Level4_3" instance=ExtResource( 11 )]
position = Vector2( 1014, 115 )

[node name="IgorFloors" type="StaticBody2D" parent="Level4_3"]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level4_3/IgorFloors"]
position = Vector2( 800, 129 )
shape = SubResource( 6 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Level4_3/IgorFloors"]
position = Vector2( 928, 129 )
shape = SubResource( 6 )
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Level4_3/IgorFloors"]
position = Vector2( 993, 97 )
shape = SubResource( 6 )
one_way_collision = true

[node name="CrystalSpawn" type="Position2D" parent="Level4_3"]
position = Vector2( 899, 69 )

[node name="LevelSetup" type="Node" parent="."]
script = ExtResource( 2 )
music = "res://music/03 Stalker.mp3"
stage = 12

[node name="SimonSpawn" type="Position2D" parent="."]
position = Vector2( 48, 144 )

[node name="BoneDragon" parent="." instance=ExtResource( 5 )]
position = Vector2( 300, 120 )

[node name="Enemy" parent="BoneDragon" index="0"]
damage = 4

[node name="BoneDragon2" parent="." instance=ExtResource( 5 )]
position = Vector2( 733, 129 )

[node name="Enemy" parent="BoneDragon2" index="0"]
damage = 4

[node name="OutsideBorder" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutsideBorder"]
position = Vector2( -10, 103 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OutsideBorder"]
position = Vector2( 1035, 87.5 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="OutsideBorder"]
position = Vector2( 889.875, -8.75 )
shape = SubResource( 7 )

[node name="Destructible" parent="." instance=ExtResource( 7 )]
position = Vector2( 312, 120 )
drop = "porkchop"
texture = ExtResource( 8 )

[node name="Destructible2" parent="." instance=ExtResource( 7 )]
position = Vector2( 744, 120 )
drop = "bigHeart"
texture = ExtResource( 8 )

[node name="EndLevelData" type="Node" parent="."]
script = ExtResource( 3 )
crystalLocation = NodePath("../Level4_3/CrystalSpawn")
nextLevelNum = 5
nextLevel = "res://levels/Level5_1.tscn"

[connection signal="body_entered" from="Level4_3/BossArea" to="." method="_on_BossArea_body_entered"]
[connection signal="bossReady" from="Level4_3/BossArea" to="." method="_on_BossArea_bossReady" flags=6]
[connection signal="damaged" from="Level4_3/Frank" to="." method="_on_Frank_damaged"]
[connection signal="dead" from="Level4_3/Frank" to="." method="_on_Frank_dead"]

[editable path="BoneDragon"]
[editable path="BoneDragon2"]
